feat: get chat messages
